--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "hoodie-plugin-stripe-taxamo",
   "version": "1.0.0",
   "description": "Hoodie signup with stripe",
-  "keywords": ["hoodie", "plugin", "stripe", "taxamo"],
+  "keywords": [
+    "hoodie",
+    "plugin",
+    "stripe",
+    "taxamo"
+  ],
   "main": "worker.js",
   "scripts": {
     "lint": "eslint hooks/*.js hooks/**/*.js lib/*.js test/*.js worker.js && jscs hooks/*.js hooks/**/*.js lib/*.js test/*.js worker.js",
     "test": "mocha test/*.js test/**.js --colors",
-    "ping": "API_URL='/_api/_plugins/stripe/_api' && curl $HOODIE_URL$API_URL -H 'Content-Type: application/json' -H 'Pragma: no-cache' -H 'Cache-Control: no-cache' --data '{\"method\":\"ping\"}'"
+    "ping": "API_URL='/_api/_plugins/stripe/_api' && curl $HOODIE_URL$API_URL -H 'Content-Type: application/json' -H 'Pragma: no-cache' -H 'Cache-Control: no-cache' --data '{\"method\":\"ping\"}'",
+    "serve": "browser-sync start --server --startPath 'test/index.html' --files 'hoodie.stripe.js, test/*.js, test/index.html'"
   },
   "dependencies": {
     "bluebird": "^2.10.0",
     "boom": "^2.9.0",
+    "chromelogger": "^1.1.1",
     "couchr": "^0.0.16",
     "hoodie": "^2.1.1",
     "node-fetch": "^1.3.2",
@@ -19,6 +26,7 @@
     "vatrates": "^1.2.0"
   },
   "devDependencies": {
+    "browser-sync": "^2.9.8",
     "chai": "^3.3.0",
     "eslint": "^1.5.0",
     "eslint-plugin-mocha": "^1.0.0",
