--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,5 @@
 {
+	"extends": "eslint:recommended",
 	"env": {
 		"browser": true,
 		"node": true,
@@ -8,11 +9,10 @@
 	"plugins": [
       "mocha"
     ],
-    "globals": {
-	},
-	"rules": {
+    "rules": {
 		"quotes": [ 2, "single" ],
 		"no-unused-vars": 2,
-		"mocha/no-exclusive-tests": 2
+		"mocha/no-exclusive-tests": 2,
+		"comma-dangle": 0
 	}
 }
