--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "hoodie": "^2.1.1",
     "lodash": "^3.10.1",
     "node-fetch": "^1.3.2",
+    "node-uuid": "^1.4.7",
     "stripe": "^3.9.0",
     "vatrates": "^1.2.0"
   },
